Update ClassWeather.java